# screen-dimmer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  THIRD_PARTY_LICENSES.txt  build-gnu.ps1  usage.json
.cargo/: config.toml
src/: app.rs  gamma.rs  lib.rs  main.rs  platform.rs  settings.rs  storage.rs  windows_layered.rs
